Fixed GridLayout Issue

--- a/components/todoListItem/todoListItem.module.scss
+++ b/components/todoListItem/todoListItem.module.scss
@@ -1,11 +1,8 @@
 @import '../../shared/global';
 
-.container {
-    // padding: 0 15px;
-    // margin-top: 40px;
-}
-
 .list {
+    page-break-inside: avoid;
+    margin-bottom: 40px;
     box-shadow: 0px 1px 5px 1px rgba(74, 74, 74, 0.09);
 
     &__header {
